oops, Dial, not Dir

--- a/Makefile.am
+++ b/Makefile.am
@@ -47,10 +47,10 @@ SHELL = /bin/bash -o pipefail
 #	cat $< | grep -v 'Dir/RL' > $@
 
 .deps/$(LANG1VARIETY1).lexd: $(BASENAME).$(LANG1).lexd .deps/.d
-	cat $< | grep -v 'Dir/$(VARIETY2)' > $@
+	cat $< | grep -v 'Dial/$(VARIETY2)' > $@
 
 .deps/$(LANG1VARIETY2).lexd: $(BASENAME).$(LANG1).lexd .deps/.d
-	cat $< | grep -v 'Dir/$(VARIETY1)' > $@
+	cat $< | grep -v 'Dial/$(VARIETY1)' > $@
 
 .deps/$(LANG1VARIETY1).RL.lexd: .deps/$(LANG1VARIETY1).lexd .deps/.d
 	cat $< | grep -v 'Dir/LR' > $@
