--- a/niv@Amur.yaml
+++ b/niv@Amur.yaml
@@ -112,3 +112,11 @@ Tests:
     ӈыю<n><sg><comp> : ӈыюк
     ӄан<n><sg><comp> : ӄанык
     вағс<n><sg><comp> : вағсык
+
+  "[lexd] compound nouns":
+    ытык<n>+пых<n><sg><nom> : ытыквых
+    тыф<n>+кезӈи<n><sg><nom> : тыфкезӈи
+    ӄан<n>+титӈыр<n><sg><nom> : ӄандитӈыр
+    умгу<n>+ӄан<n><sg><nom> : умгуӻан
+    ӿемар<n>+тяӄо<n><sg><nom> : ӿемартяӄо
+    тавӻай<n>+тяӄо<n><sg><nom> : тавӻайзаӄо
